--- a/.gitignore
+++ b/.gitignore
@@ -361,3 +361,10 @@ MigrationBackup/
 
 # Fody - auto-generated XML schema
 FodyWeavers.xsd
+
+# if it contains real paths or playlist IDs
+App.config          
+# compiled executables
+*.exe               
+# any certificates
+*.pfx               
