--- a/StartHelper/StartHelper.csproj
+++ b/StartHelper/StartHelper.csproj
@@ -41,4 +41,8 @@
     </Content>
   </ItemGroup>
 
+  <ItemGroup>
+    <PackageReference Include="SpotifyAPI.Web" Version="7.2.1" />
+  </ItemGroup>
+
 </Project>
